# doc_investigator_project

./: .gitignore  LICENSE  README.md  check_google_models.py  doc_investigator_gradio_PoC.py  requirements.txt
doc_investigator_project/: README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
doc_investigator_project/data/: evaluations.csv
doc_investigator_project/reports/: profiling_report_20250718_105136.html  profiling_report_20250728_160830.html
doc_investigator_project/src/: main.py  visualise_flow.py
doc_investigator_project/src/doc_investigator_strategy_pattern/: analysis.py  app.py  config.py  database.py  documents.py  logging_config.py  services.py  state_machine.py
doc_investigator_project/tests/: conftest.py  test_analysis.py  test_app.py  test_database.py  test_documents.py  test_llm_behaviour.py  test_state_machine.py
